# aoc2025-haskell

./: .gitignore  Aoc02.hs  Aoc04.hs  Aoc05.hs  Aoc06.hs  Aoc08.hs  Aoc09.hs  Aoc10.hs  Aoc11.hs  README.md  aoc01.hs  aoc02.hs  aoc03.hs  aoc04.hs  aoc05.hs  aoc06.hs  aoc07.hs  aoc08.hs  aoc09.gpi  aoc2025-haskell.cabal  main.hs
